--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.2",
     "js-cookie": "^3.0.5",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-chartjs-2": "^5.2.0",
