--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,9 @@
         "dotenv": "^16.4.5",
         "express": "^4.19.1",
         "jsonwebtoken": "^9.0.2",
+        "moment-timezone": "^0.5.45",
         "mongoose": "^8.2.0",
+        "node-cron": "^3.0.3",
         "nodemailer": "^6.9.11",
         "nodemon": "^3.1.0",
         "request": "^2.88.2",
