--- a/client/package.json
+++ b/client/package.json
@@ -25,7 +25,8 @@
         "react-router-dom": "^6.22.2",
         "reactjs-popup": "^2.0.6",
         "socket.io-client": "^4.7.4",
-        "universal-cookie": "^7.1.0"
+        "universal-cookie": "^7.1.0",
+        "yahoo-finance2": "^2.11.3"
     },
     "devDependencies": {
         "@types/react": "^18.2.56",
